slurm-13404099.out
quake1.c: In function 'main':
quake1.c:164:15: error: void value not ignored as it ought to be
     numthreads=omp_set_num_threads(16);
               ^
quake: Reading nodes.
quake: Reading elements.
quake: Reading sparse matrix structure.
./quake1: Beginning simulation.

CASE SUMMARY
Fault information
  Orientation:  strike: 1.937315
                   dip: 0.767945
                  rake: 1.221730
           dislocation: 29.640788 cm
Hypocenter: (32.264153, 23.814432, -11.250000) Km
Excitation characteristics
     Time step: 0.002400 sec
      Duration: 9.250000 sec
     Rise time: 0.600000 sec

/export/software/slurm/spool/slurmd/job13404099/slurm_script: line 20:  4785 Segmentation fault      (core dumped) ./quake1 < quake.in
/export/software/slurm/spool/slurmd/job13404099/slurm_script: line 22: analysis_16.txt: cannot overwrite existing file
